kubernetes/platform/gateway-api/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  
  ## Comment out the HTTPS listener at first to avoid cert issue deadlock
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: argocd-tls
    allowedRoutes:
      namespaces:
        from: All

  addresses:
  - type: NamedAddress
    value: sre-portfolio-gateway-ip
