kubernetes/platform/gateway-api/argocd-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
    sectionName: http

  ## Comment out this section before applying https in gateway api
  - name: external-gateway
    namespace: default
    sectionName: https

  hostnames:
  - "argocd.techtalkswithanant.online"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
